[package]
name = "vectorflow"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.3"
gloo-utils = "0.1"
js-sys = "0.3"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.68"
rand = "0.10.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
log = "0.4.29"
wasm-logger = "0.2.0"
gif = "0.13"

[dependencies.web-sys]
version = "0.3.95"
features = [
  "HtmlImageElement",
  "HtmlCanvasElement",
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
  "MediaRecorder",
  "MediaRecorderOptions",
  "MediaStream",
  "BlobEvent",
  "BeforeUnloadEvent",

  "Blob",
  "BlobPropertyBag",
  "Url",
  "HtmlAnchorElement"
]

[lib]
name = "vectorflow"
crate-type = ["cdylib", "rlib"]
